--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,35 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>glassfishGit</name>
+  <dependencies>
+  <dependency>
+    <groupId>org.eclipse.persistence</groupId>
+    <artifactId>eclipselink</artifactId>
+    <version>2.0.0</version>
+    <scope>compile</scope>
+  </dependency>
+    <dependency>
+    <groupId>org.eclipse.persistence</groupId>
+    <artifactId>javax.persistence</artifactId>
+    <version>
+    2.0.4.v201112200901
+    </version>
+    
+    </dependency>
+    </dependencies>
+    <repositories>
+  <repository>
+     <id>EclipseLink Repo</id>
+     <!-- note that ampersands in this URL are escaped because this is in an xml file -
+            un-escape them to use in browser 
+     -->
+     <url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo</url>
+     <!-- use this for javax.persistence
+     <snapshots>
+        <enabled>true</enabled>
+     </snapshots> -->
+  </repository>    
+    
+</repositories> 
+    
 </project>
